# ai-cad-editor-2

./: .gitignore  README.md  app.py  demo_phase3.py  pyproject.toml  requirements.txt
ai_cad_editor/: __init__.py
ai_cad_editor/agent/: __init__.py  cad_agent_claude.py  cad_agent_gemini.py  cad_agent_openai.py  tools.py
ai_cad_editor/inspect/: __init__.py  summary.py
ai_cad_editor/operations/: __init__.py  core.py  geometry.py  spatial.py
examples/: dwg_to_dxf_converter.py
examples/dxf_files/: building005-0_floor2.dxf  sample_floor_plan.dxf
examples/dxf_files_korean(use-only-dxf)/: 등록428_서울 구 용산철도병원 본관_06-지하평면도.dwg  등록428_서울 구 용산철도병원 본관_06-지하평면도.dxf  등록428_서울 구 용산철도병원 본관_07-1층평면도.dwg  등록428_서울 구 용산철도병원 본관_07-1층평면도.dxf  등록428_서울 구 용산철도병원 본관_08-2층평면도.dwg  등록428_서울 구 용산철도병원 본관_08-2층평면도.dxf
