[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cad-editor"
version = "0.1.0"
description = "Natural language interface for editing DXF/DWG architectural floor plans"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "ezdxf>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
]
web = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
ai = [
    "anthropic>=0.7.0",
]

[project.scripts]
summarize-dxf = "ai_cad_editor.scripts.summarize_dxf:main"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
